--- a/megaroster.html
+++ b/megaroster.html
@@ -11,14 +11,22 @@
   <![endif]-->
   </head>
   <body>
-    <div class="well">
-      <h1>megaroster</h1>
+    <div class="well col-sm-8 col-sm-offset-2 col-xs-12">
+      <h1>Megaroster</h1>
+      <ol id="students" class="list-group">
+      </ol>
+
+      <form id="new_student_form" class="form-inline" role="form">
+        <label>
+          <input type="text" name="student_name" class="form-control">
+          <input type="submit" value="Add Student" class="btn btn-primary btn-sm">
+        </label>
+      </form>
     </div>
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.js"></script>
+    <<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>;
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script>;
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.js"></script>;
     <script src="js/megaroster.js"></script>
   </body>
 </html>
