--- a/megaroster.html
+++ b/megaroster.html
@@ -3,20 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Megaroster</title>
-    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css>
-    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.css>
-    <link rel="stylesheet" href="css/megaroster.css" charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/megaroster.css"  charset="utf-8">
     <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>;
-  <![endif]-->
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>;
+    <![endif]-->
   </head>
   <body>
+
     <div class="well col-sm-8 col-sm-offset-2 col-xs-12">
       <h1>Megaroster</h1>
+
       <ol id="students" class="list-group">
+        <li id="list_item_template" class="list-group-item hidden">
+          <button class="btn btn-sm btn-danger delete">
+            <i class="fa fa-trash-o"></i>
+          </button>
+        </li>
       </ol>
 
-      <form id="new_student_form" class="form-inline" role="form">
+      <form role="form" id="new_student_form" class="form-inline">
         <label>
           <input type="text" name="student_name" class="form-control">
           <input type="submit" value="Add Student" class="btn btn-primary btn-sm">
@@ -24,9 +32,9 @@
       </form>
     </div>
 
-    <<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>;
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script>;
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.js"></script>;
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.js"></script>
     <script src="js/megaroster.js"></script>
   </body>
 </html>
